test/logs/3d-1d-2445369.err
INFO:    Using cached SIF image
INFO:    gocryptfs not found, will not be able to use gocryptfs
/usr/local/lib/python3.12/site-packages/ufl_legacy/__init__.py:243: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
/usr/local/lib/python3.12/site-packages/block/__init__.py:15: UserWarning: The cbc.block repository has moved to https://github.com/blocknics/cbc.block
  warnings.warn('The cbc.block repository has moved to https://github.com/blocknics/cbc.block', UserWarning)
Traceback (most recent call last):
  File "/work2/10756/piercezhang9871/stampede3/3d-1d/test/00_tacc_test.py", line 11, in <module>
    from src import Domain1D, Domain3D, Simulation, release_solution
  File "/work2/10756/piercezhang9871/stampede3/3d-1d/src/__init__.py", line 2, in <module>
    from .domain import Domain1D, Domain3D
  File "/work2/10756/piercezhang9871/stampede3/3d-1d/src/domain.py", line 10, in <module>
    class Domain1D:
  File "/work2/10756/piercezhang9871/stampede3/3d-1d/src/domain.py", line 27, in Domain1D
    inlet_nodes: Optional[Sequence[int]] = None,
                          ^^^^^^^^
NameError: name 'Sequence' is not defined
srun: error: c454-084: task 0: Exited with exit code 1
